log for deploy bug

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   # PostgreSQL Database (for local development)
   postgres:
     image: postgres:15-alpine
-    container_name: qc-panel-postgres
+    container_name: qc-panel-postgres-local
     restart: unless-stopped
     environment:
       POSTGRES_USER: postgres
@@ -24,8 +24,8 @@ services:
   api:
     build:
       context: .
-      dockerfile: Dockerfile
-    container_name: qc-panel-api
+      dockerfile: Dockerfile.minimal
+    container_name: qc-panel-api-local
     restart: unless-stopped
     ports:
       - "8000:8000"
@@ -43,16 +43,12 @@ services:
       # CORS Origins
       CORS_ORIGINS: http://localhost:3000,http://localhost:5173,http://localhost:4173
       # JWT Configuration
-      JWT_SECRET_KEY: dev-secret-key-change-in-production
+      JWT_SECRET_KEY: local-dev-secret-key
       JWT_ALGORITHM: HS256
       JWT_EXPIRE_MINUTES: 1440
     depends_on:
       postgres:
         condition: service_healthy
-    volumes:
-      - .:/app
-    # Uncomment below for development with auto-reload
-    # command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload
 
 volumes:
   postgres_data:
